Updated demo app to not choke on large configuraiton numbers (allow chunks up to 128kB)

--- a/parse.html
+++ b/parse.html
@@ -607,8 +607,8 @@ OBIytsIYEoiEl0lqFWgKM4zkUJzjWQwJADs=
 --=-qYxqvD9rbH0PNeExagh1--
 </textarea></p>
 
-    <p>Max body chunk size in bytes: <input type="text" id="chunksize" value="255" /></p>
-    <p>Input chunk size: <input type="text" id="inputsize" value="1" /></p>
+    <p>Max body chunk size in bytes: <input type="text" id="chunksize" value="255" /> (max 128kB)</p>
+    <p>Input chunk size: <input type="text" id="inputsize" value="1" /> (max 128kB)</p>
 
     <p><button onclick="parse();">Parse</button></p>
 
