Extracting example app to another repo

--- a/tests/testrunner.html
+++ b/tests/testrunner.html
@@ -9,7 +9,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="vendor/qunit/qunit.js"></script>
-    <script src="../mimefuncs.js"></script>
+    <script src="../deps/mimefuncs.js"></script>
     <script src="../mimeparser.js"></script>
     <script src="mimeparser.js"></script>
 </body>
